test/error/parser/struct-unexpected-token.dsk
struct S
    42
end
